fixed small issues

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="col-sm-6 text-center">
         <h5 class="mt-4">
-          inventory: <%= @image.inventory %>
+          inventory: <%= @image.inventory.to_int() %>
         </h5>
       </div>
     </div>
